@@ -2,7 +2,7 @@ Source: gfxboot-theme-ubuntu
 Section: utils
 Priority: optional
 Maintainer: Colin Watson <cjwatson@ubuntu.com>
-Build-Depends-Indep: debhelper (>= 4)
+Build-Depends-Indep: debhelper (>= 4), gfxboot
 Standards-Version: 3.6.2
 
 Package: gfxboot-theme-ubuntu
