@@ -28,5 +28,8 @@ gfxboot-theme-ubuntu (0.1.0) dapper; urgency=low
     - Use subtler boot menu selection colours in place of inverse-video.
     - Change the font to GNU unifont, from the unifont package.
     - Update language codes and names from localechooser 0.22ubuntu2.
+    - Include /usr/share/gfxboot/themes/Ubuntu/bootlogo.tar.gz, which can be
+      unpacked directly into /isolinux on a CD rather than having to unpack
+      and repack cpio archives.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Sat, 10 Dec 2005 10:48:12 +0000
